# sftkit

./: .env  .eslintrc.config.js  .gitignore  .prettierignore  LICENSE  README.md  jest.preset.ts  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yaml  publish.yaml
backend/: pyproject.toml
backend/sftkit/: error.py  service.py  util.py
backend/sftkit/database/: __init__.py  _attach.py  _config.py  _connection.py  _database.py  _migrations.py  _pool.py
sftkit/: CHANGELOG.md  Makefile  README.md  project.json  pyproject.toml
sftkit/sftkit/: __main__.py  service.py
sftkit/sftkit/database/: __init__.py  _attach.py  _connection.py  _database.py  _hook.py  _migrations.py  _pool.py
sftkit/sftkit/devel/: __init__.py  _cli.py  _config.py  _debian.py
sftkit/sftkit/http/: __init__.py  _context.py  _error.py  _server.py
sftkit/src/sftkit/: async_thread.py  service.py
sftkit/src/sftkit/database/: __init__.py  _attach.py  _connection.py  _database.py  _pool.py
sftkit/src/sftkit/database/introspection/: __init__.py
sftkit/src/sftkit/http/: _config.py  _context.py  _server.py
sftkit/test_package/: pyproject.toml
sftkit/tests/: conftest.py  test_dbhook.py  test_dummy.py  test_introspection.py  test_migrations.py
sftkit/tests/assets/minimal_db/code/: constraints.sql  functions.sql  triggers.sql  views.sql
sftkit/tests/assets/minimal_db/migrations/: 0001-initial.sql
tools/nx-python/: .eslintrc.config.js  README.md  executors.json  generators.json  jest.config.ts  package.json  project.json
tools/nx-python/src/: graph.spec.ts  graph.ts  index.ts
tools/nx-python/src/executors/release-publish/: executor.ts  schema.d.ts  schema.json
tools/nx-python/src/generators/release-version/: generator.ts  schema.d.ts  schema.json
tools/nx-python/src/utils/: pyproject-toml.ts
web/: .gitignore  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
web/components/: CHANGELOG.md  jest.config.ts  package.json  project.json  vite.config.ts
web/components/src/: index.ts
web/components/src/lib/numeric-input/: NumericInput.tsx
web/form-components/: CHANGELOG.md  README.md  jest.config.ts  package.json  project.json  vite.config.ts
web/form-components/src/lib/: FormDateTimePicker.tsx  FormNumericField.tsx  FormSelect.tsx  StepperForm.tsx
web/modal-provider/: .eslintrc.config.js  CHANGELOG.md  README.md  jest.config.ts  package.json  project.json  vite.config.ts
web/utils/: CHANGELOG.md  jest.config.ts  package.json  project.json  vite.config.ts
web/utils/src/lib/: validation.spec.ts
