[project]
license = { file = "LICENSE" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/sftkit",
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E", "PL"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]
