[project]
name = "sftkit-monorepo"
version = "0.0.0"
license = { file = "LICENSE" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.uv.workspace]
members = ["sftkit"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E", "PL"]
ignore = ["PLR0913", "PLC0415", "E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]
