[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sftkit"
version = "0.2.0"
license = { text = "MIT" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
dynamic = ["description"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.22.0",
    "asyncpg>=0.29.0",
    "pydantic[email]==2.7.4",
]

[project.urls]
Source = "https://github.com/SFTTech/sftkit"

[project.scripts]
sftkit = "sftkit.devel:cli_main"

[tool.coverage.run]
source = ["sftkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E", "PL"]
ignore = ["PLR0913", "E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]
