
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sftkit"
version = "0.3.3"
license = { text = "MIT" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
dynamic = ["description"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.10",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.6",
]

[project.urls]
Source = "https://github.com/SFTTech/sftkit"

[project.scripts]
sftkit = "sftkit.devel:cli_main"

[tool.coverage.run]
source = ["sftkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E", "PL"]
ignore = ["PLR0913", "E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]
